test_regress/t/t_interface_mismodport_bad.out
%Error: t/t_interface_mismodport_bad.v:36:12: Can't find definition of 'bad' in dotted signal: 'isub.bad'
   36 |       isub.bad = i_value;   
      |            ^~~
        ... Known scopes under 'bad': <no instances found>
%Error: Exiting due to
